correct menu alignments

--- a/src/scss/theme/common/_header.scss
+++ b/src/scss/theme/common/_header.scss
@@ -15,6 +15,7 @@
 			transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
 		}
 		.menu-toggled & {
+			background-color: var(--header-bg-color, transparent) !important;
 			transition: background-color 50ms cubic-bezier(0.4, 0, 0.2, 1);
 		}
 	}
